--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<h1>Hello!</h1>
+<!DOCTYPE html>
+<html lang="en-US">
+
+<head>
+    <title>This is a title</title>
+    <script src="js/script.js" defer></script>
+</head>
+
+<body>
+    
+    <button onClick="showText()" id="testButton">Click Me!</button>
+
+    <div id="textField" style="display: none;">
+        This is the text that appears.
+    </div>
+</body>
+
+</html>
+
